# TrackmaniaBingo

./: .gitignore  CHANGELOG  LICENSE  PREVIEW.md  README.md  info.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  other.md
bingoserver/: .gitignore  app.py  auth.py  channel.py  config.py  db.py  game.py  message.py  pyproject.toml  user.py
bingoserver/data/: config.default.toml
bingoserver/models/: channel.py  events.py  game.py  user.py
client/: .clang-format  CHANGELOG  info.toml
client/data/: Bingo_Events.Script.txt  Bingo_PlayMap_Local.Script.txt
client/scripts/: format.sh
client/src/: api.as  board.as  config.as  datatypes.as  exception.as  game.as  gamemaster.as  gameserver.as  gametime.as  global.as  handlers.as  infobar.as  locator.as  login.as  main.as  maplist.as  match.as  models.as  net.as  netparams.as  play.as  powerups.as  protocol.as  room.as  serial.as  settings.as  storage.as  time.as  update.as  utils.as  window.as
common/: typegen.py  types.xml  types.xsd
common/schema/: types.xsd
common/targets/: angelscript.py  common.py  python.py  (+1 more)
docs/: angelscript.md  contributing.md  integration-tutorial.md  local-development.md  server-overview.md  typegen.md
server/: .gitignore  Cargo.toml  Dockerfile  README.md  bench.config.toml  config.toml  diesel.toml
server/data/: config.bench.toml  config.default.toml
server/data/versions/: v2.sql  v3.sql  v4.sql
server/db/migrations/2023-04-27-165200_create_player/: up.sql
server/db/migrations/2023-05-18-182418_create_match/: down.sql  up.sql
server/db/migrations/2023-05-18-203424_add_player_title/: down.sql  up.sql
server/db/migrations/2023-08-26-122450_add_daily_challenge/: down.sql  up.sql
server/db/versions/: v1.sql  v2.sql
server/orm/: Cargo.toml
server/orm/migrations/2023-04-27-165200_create_player/: down.sql
server/orm/src/: lib.rs
server/orm/src/models/: player.rs
server/scripts/hooks/: main.py
server/scripts/mapcache/: README.md  main.py  mapcache.service  mapcache.timer  pyproject.toml  run.sh  systemd-install.sh
server/src/: _config.rs  channel.rs  client.rs  config.rs  context.rs  datatypes.rs  events.rs  gamecommon.rs  gamedata.rs  gamemap.rs  gameroom.rs  gameteam.rs  handshake.rs  main.rs  mapqueue.rs  reconnect.rs  requests.rs  roomlist.rs  server.rs  socket.rs  sync.rs
server/src/core/: directory.rs  gamecommon.rs  identity.rs  livegame.rs  map.rs  mod.rs  room.rs  roomlist.rs  team.rs  teams.rs
server/src/core/events/: game.rs  mod.rs  room.rs  roomlist.rs
server/src/core/models/: livegame.rs  map.rs  mod.rs  player.rs  room.rs  team.rs
server/src/core/util/: mod.rs  serialize.rs  uuid.rs
server/src/handlers/: change_team.rs  create_room.rs  mod.rs  ping.rs
server/src/integrations/: hooks.rs  mod.rs  webservices.rs
server/src/integrations/openplanet/: auth.rs  mod.rs
server/src/integrations/tmexchange/: mappack.rs  mod.rs  models.rs
server/src/integrations/tmio/: country.rs  mod.rs
server/src/orm/: dsl.rs  mod.rs  schema.rs
server/src/orm/composed/: daily.rs  mod.rs  profile.rs
server/src/orm/mapcache/: mod.rs  record.rs  schema.rs
server/src/orm/models/: matches.rs  mod.rs  player.rs
server/src/rest/: auth.rs  mod.rs  tmexchange.rs
server/src/server/: auth.rs  client.rs  context.rs  daily.rs  handshake.rs  mainloop.rs  mapcache.rs  mapload.rs  messager.rs  mod.rs  requests.rs  tasks.rs  token.rs  version.rs
server/src/server/handlers/: activate_powerup.rs  change_player_team.rs  change_team.rs  create_room.rs  create_team.rs  daily_challenge.rs  daily_results.rs  delete_team.rs  edit_config.rs  generic.rs  get_dice_choices.rs  get_public_rooms.rs  join_match.rs  join_room.rs  match_join.rs  mod.rs  ping.rs  ping_cell.rs  poll_vote.rs  reload_maps.rs  send_chat.rs  shuffle_teams.rs  start_match.rs  submit_run.rs  unsubscribe_roomlist.rs  vote_reroll.rs
server/src/store/: mod.rs  operations.rs
server/src/store/matches/: mod.rs  models.rs
server/src/store/player/: mod.rs  models.rs
server/src/transport/: channel.rs  messager.rs  mod.rs
server/src/transport/client/: mod.rs  tcpnative.rs
server/src/util/: base64.rs  color.rs  mod.rs  roomcode.rs  sink.rs
server/src/web/: actions.rs  helpers.rs  mod.rs  reject.rs  roomlist.rs
server/src/web/routes/: auth.rs  dir.rs  mod.rs  room.rs
server/src/web/static/css/: main.css
server/src/web/templates/: index.hbs  roomlist.hbs
server/transport/: Cargo.toml
server/transport/src/: channel.rs  lib.rs
server/transport/src/client/: mod.rs  tcpnative.rs
src/: board.as  callback.as  changelog.as  color.as  config.as  game.as  handlers.as  infobar.as  locator.as  main.as  maplist.as  net.as  play.as  protocol.as  roomconfig.as  settings.as  time.as  window.as
web/: .gitignore  app.py  auth.py  datatypes.py  pyproject.toml  room.py
(+84 files in other folders)
