[package]
name = "bingohost"
version = "0.1.0"
edition = "2021"


[dependencies]
# Generic library for handling async futures
futures = "0.3.25"

# Provides an hash-map-like data structure
generational-arena = { version = "0.2.8", features = ["serde"] }

# Random number generation
rand = "0.8.5"

# Async HTTP requests
reqwest = { version = "0.11.13", features = ["json", "multipart"] }

# Serialization framework
serde = { version = "1.0.148", features = ["serde_derive"] }

# Json support for serde
serde_json = "1.0.89"

# repr(x) support for serde
serde_repr = "0.1.9"

# Serializable trait objects
typetag = "0.2.5"

# #[derive(Error)] macro
thiserror = "1.0.37"

# Logging facility
tracing = "0.1.37"

# Default log handler to print to standard output
tracing-subscriber = "0.3.16"

# Asynchronous runtime
tokio = { version = "1.23.0", features = ["full"] }

# Error handling
anyhow = "1.0.68"

# Poison-free mutexes
parking_lot = "0.12.1"

# Lazy static initialization
once_cell = "1.17.1"

# HTTP server
warp = "0.3.3"

# HTML templates
handlebars = "4.3.6"

# Date and time
chrono = { version = "0.4.24", features = ["serde"] }

# Depend on a patched tokio runtime to fix inconvenient trait implementations
#[patch.crates-io]
#tokio = { git = "https://github.com/Geekid812/tokio", branch = "tokio-1.23.x"}

[features]
preview = []
live = []
