[package]
name = "bingohost"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.148", features = ["serde_derive"] }
thiserror = "1.0.37"
tracing = "0.1.37"
chrono = { version = "0.4.24", features = ["serde"] }

# Generic library for handling async futures
futures = "0.3.25"

# Provides an hash-map-like data structure
generational-arena = { version = "0.2.8", features = ["serde"] }

# Random number generation
rand = {version = "0.8.5", features = ["small_rng"] }

# Json support for serde
serde_json = "1.0.89"

# repr(x) support for serde
serde_repr = "0.1.9"

# Serializable trait objects
typetag = "0.2.5"

# Default log handler to print to standard output
tracing-subscriber = "0.3.16"

# Asynchronous runtime
tokio = { version = "1.23.0", features = ["full"] }

# Error handling
anyhow = "1.0.68"

# Poison-free mutexes
parking_lot = "0.12.1"

# Lazy static initialization
once_cell = "1.17.1"

# Date and time

# Config parsing
toml = "0.7.3"
reqwest = { version = "0.11.17", features = ["multipart", "json"] }
diesel = { version = "2.0.4", features = ["sqlite"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
warp = "0.3.5"
handlebars = "4.3.6"
bytes = "1.4.0"
deadpool-diesel = {verion = "0.4.1", features = ["sqlite"] }
