[package]
name = "bingohost"
description = "Server application for Trackmania Bingo."
version = "1.6.0"
edition = "2021"

[dependencies]
# Serialization framework
serde = { version = "1.0.148", features = ["serde_derive"] }

# Error types helper
thiserror = "1.0.37"

# Logging framework
tracing = "0.1.37"

# Generic library for handling async futures
futures = "0.3.25"

# Provides a hash-map-like data structure
generational-arena = { version = "0.2.8", features = ["serde"] }

# Random number generation
rand = { version = "0.8.5", features = ["small_rng"] }

# Json support for serde
serde_json = "1.0.89"

# repr(x) support for serde
serde_repr = "0.1.9"

# Default log handler to print to standard output
tracing-subscriber = "0.3.16"

# Asynchronous runtime
tokio = { version = "1.23.0", features = ["full"] }

# Error handling
anyhow = "1.0.68"

# Poison-free mutexes
parking_lot = "0.12.1"

# Lazy static initialization
once_cell = "1.17.1"

# Date and time
chrono = { version = "0.4.24", features = ["serde"] }

# Config parsing
toml = "0.7.3"

# HTTP requests
reqwest = { version = "0.11.17", features = ["multipart", "json"] }

# Utilities for protocol codec
tokio-util = { version = "0.7.8", features = ["codec"] }

# Web server library
warp = "0.3.5"

# Utilities for working with bytes
bytes = "1.4.0"

# Utilities for serializing chrono types
serde_with = { version = "3.0.0", features = ["chrono_0_4"] }

# Color helper
palette = { version = "0.7.3", features = ["serializing"] }

# Database engine
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite", "chrono"] }

# Async future blocker
pollster = "0.3.0"
derivative = "2.2.0"
